<resources>
    <string name="app_name">doCheck</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_check">CheckActivity</string>
    <string name="title_activity_device">DeviceListActivity</string>
    <string name="title_activity_check_base">CheckBaseActivity</string>
    <string name="app_title">doCheck tool</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_summary">SummaryActivity</string>
    <string name="default_time">888</string>
    <string name="title_activity_re_check_choose">ReCheckChooseActivity</string>
    <string name="title_activity_check_result">CheckResultActivity</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>

    <string name="ok">OK</string>
    <string name="ng">NG</string>
    <string name="cancel">Cancel</string>
    <string name="nfc_cancel">Cancel</string>
    <string name="ejustcn">ejustcn</string>
    <string name="title">title</string>
    <string name="content">content</string>
    <string name="finished">finished</string>
    <string name="docheck">doCheck</string>
    <string name="nfc_message">Message from NFC Reader :-)</string>

    <!-- Weibo -->
    <string name="sina_weibo_key">your weibo key</string>
    <string name="sina_weibo_redirecturi">your weibo redirecturi</string>

    <!-- Weixin -->
    <string name="weixin_key">your weixin key</string>
    <string name="weixin_redirecturi">your weixin redirecturi</string>

    <!-- QQ -->
    <string name="tencent_qq_appid">222222</string>


    <string name="bt_not_enabled_leaving">Can not use bluetooth, please exit</string>
    <string name="title_paired_devices">Paired Device</string>
    <string name="title_other_devices">Other devices</string>
    <string name="button_scan">Scan device</string>
    <string name="select_device">Select device</string>
    <string name="scanning">Scanning…, &#8230;</string>
    <string name="none_paired">No paired device</string>
    <string name="none_found">Can not find\n</string>
    <string name="check_result_success">check OK!</string>
    <string name="check_result_failure">check NG!</string>
    <string name="connecting">Connecting</string>
    <string name="connect_error">Connect Device Failure</string>
    <string name="connection_lost">The connection is disconnected.</string>
    <string name="xmv">x axis median value</string>
    <string name="ymv">y axis median value</string>
    <string name="zmv">z axis median value</string>
    <string name="btn_device">Bluetooth device</string>
    <string name="btn_cali">Calibration</string>
    <string name="btn_close">Close</string>
    <string name="btn_conn">Connect the Device</string>
    <string name="btn_disconn">Disconnect the Device</string>
    <string name="btn_ok">Confirm</string>
    <string name="exit_tip">Prompt</string>
    <string name="exit_info">Are you sure want to exit this APP?</string>
    <string name="exit_ok">Exit</string>
    <string name="continue_check">Continue to check</string>
    <string name="error">Error</string>
    <string name="no_nfc">No NFC devices found</string>
    <string name="nfc_disabled">NFC is not open. Please open it in the wireless settings.</string>
    <string name="open_nfc">Open it.</string>
    <string name="action_refresh">Refresh</string>
    <string name="soft_update_title">Software update</string>
    <string name="soft_update_info">New version detected, update now?</string>
    <string name="soft_update_updatebtn">Update</string>
    <string name="soft_updating">Updating</string>
    <string name="soft_update_cancel">Cancel</string>
    <string name="please_turn_on_bt">Please turn on Bluetooth</string>
    <string name="remind_later">Later</string>
    <string name="download_failed">Download failed. Please check whether the network is open.</string>
    <string name="version">Version number:</string>
    <string name="delete_the_photo">Are you sure want to delete the selected file?</string>
    <string name="connect_err">Connection failed, please check whether the device is normal</string>
    <string name="login_has_expired">Login expired</string>
    <string name="unlock_lock_failed">Unlock Or Lock Failure</string>
    <string name="motion_detection_failed">Motion detect failure</string>
    <string name="device_exception">Device exception</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="check_passed">Inspection Success,send result to device?</string>
    <string name="check_failed">Inspection Failure,send result to device?</string>
    <string name="submit_success">Submit success</string>
    <string name="submit_failed">Failed to submit</string>
    <string name="enter_the_content">Please enter content</string>
    <string name="received_data_is_error">Error data received</string>
    <string name="login_failed">Login failure,please check user name or password</string>
    <string name="key_is_close">Not power On</string>
    <string name="Driver_license_expired">License expired</string>
    <string name="used_by_other_users">Device is using by other user</string>
    <string name="forklift_failure">Device malfunctioned</string>
    <string name="card_number_err">Incorrect card number or no authorization</string>
    <string name="unlock_failed_brush_battery_card">Unlock Device Fail，please punch battery card first.</string>
    <string name="unlock_failed">Unlock failure</string>
    <string name="device_no_answer">Device No Answer</string>
    <string name="device_response_incorrect">Device Error Answer</string>
    <string name="choose_forklift">Please select the forklift you need to operate</string>
    <string name="card_too_frequent">Your card is swiped too frequently.</string>
    <string name="please_enter_username_and_password">Please enter your user name and password</string>
    <string name="not_allow_bt_open">Bluetooth is not allowed to be enabled.</string>
    <string name="vehicle_information">Vehicle information</string>
    <string name="no_check_items">No Inspect Item found</string>
    <string name="controller_updating">Updating Inspect Items,Please try again later</string>
    <string name="check_function_not_enabled">No Inspection Function</string>
    <string name="no_need_check">No need Inspection</string>
    <string name="too_many_check_items">There are too many check items, please adjust the server settings</string>
    <string name="token_invalid">Invalid Token</string>
    <string name="admin">(Management)</string>
    <string name="ordinary">(Normal)</string>
    <string name="checked">Already Inspected</string>
    <string name="not_checked">Not Inspect</string>
    <string name="failure">Malfunction</string>
    <string name="normal">Normal</string>
    <string name="locked">Device Locked</string>
    <string name="unlocked">Device Unlocked</string>
    <string name="forced_check">Compulsory Inspect</string>
    <string name="not_mandatory_check">Not Compulsory Inspect</string>
    <string name="unlocked_success">Unlock success</string>
    <string name="locked_exit_prompt">Will logout if close APP\nYou should login again before next operation.</string>
    <string name="unlocked_exit_prompt">Device working, press “Logout APP” will close APP and shutdown device,you need punch the card before next operation.\n Press “Close APP Only” you can keep device power on,punch the card to power off device before you leave.</string>
    <string name="logout_and_close_the_app">Logout APP</string>
    <string name="close_the_app">Close APP Only</string>
    <string name="back_keycode_prompt">Do you want to close the vehicle, or just exit the program and keep the vehicle open?</string>
    <string name="exit_app">Exit the program only</string>
    <string name="close_vehicle">Shutdown Device</string>
    <string name="not_found_bt">No Bluetooth hardware or driver was found on this computer!</string>
    <string name="no_exercise_testing">Item %1$s do not detect any motion, please do it</string>
    <string name="img_uploading">Picture uploading:</string>
    <string name="upload_failed">Upload failed</string>
    <string name="upload_success">Uploaded success</string>
    <string name="upload_failed_internet">Upload failed. Please check whether the WIFI or network connection is enabled.</string>
    <string name="about">About</string>
    <string name="category">Category</string>
    <string name="item">Item</string>
    <string name="desc">Description</string>
    <string name="memo">Comments:</string>
    <string name="memo_desc">Brief Description</string>
    <string name="photo">Photo:</string>
    <string name="prompt">&#160;Warning</string>
    <string name="sugges_and_feedback">Help and Feedback</string>
    <string name="enter_suggestions_and_feedback">Please enter your suggestions and feedback</string>
    <string name="submit">Submit</string>
    <string name="enter_account_or_swipe_to_login">Please enter your account to login or swipe to login</string>
    <string name="swipe_card_on_back">Please swipe behind</string>
    <string name="customer">Customer name</string>
    <string name="device">Device</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="vehicle_number">Vehicle number:</string>
    <string name="driver">Driver:</string>
    <string name="check_status">Check status:</string>
    <string name="fault_status">Error code:</string>
    <string name="no_fault">Normal(No fault)</string>
    <string name="locked_state">Locked state:</string>
    <string name="mandatory_check">Force check or not:</string>
    <string name="check">Inspection</string>
    <string name="car">Work</string>
    <string name="daily_check">Daily Inspection</string>
    <string name="add_img">Add picture information</string>
    <string name="load">Click to load</string>
    <string name="category_title">Category:</string>
    <string name="item_title">Item:</string>
    <string name="desc_title">Description:</string>
    <string name="result_title">Result:</string>
    <string name="sign_out">Logout</string>
    <string name="share">Share</string>
    <string name="update">Check for Updates</string>
    <string name="confirm">Confirm</string>
    <string name="change_driver_check">Driver Change Inspection</string>

</resources>
