<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="210dp"
    android:background="#ffffff"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#1bbaa9"
        android:gravity="center_vertical"
        android:text="@string/prompt"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_checkresult"
            android:layout_width="52dp"
            android:layout_height="33dp"
            android:background="@drawable/result_pass"
            android:layout_marginLeft="15dp" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:paddingLeft="10dp"
            android:text="@string/check_result_success"
            android:textColor="#000000"
            android:textSize="18sp"
            android:gravity="center_vertical|left"
            android:layout_marginRight="15dp">
        </TextView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/iv_confirm"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:textColor="#ffffff"
            android:text="@string/yes"
            android:background="#1bbaa9" >
        </Button>

        <Button
            android:id="@+id/iv_no"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:textColor="#ffffff"
            android:text="@string/no"
            android:background="#1bbaa9" >
        </Button>
    </RelativeLayout>

</LinearLayout>