<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="zlian.netgap.ui.CheckActivity">

    <include
        android:id="@+id/rl_title"
        layout="@layout/check_head"></include>

    <!--<RelativeLayout-->
    <!--android:id="@+id/rl_title"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="55dp">-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_alignParentLeft="true"-->
    <!--android:textSize="18sp"-->
    <!--android:gravity="center"-->
    <!--android:text="返回"/>-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_centerInParent="true"-->
    <!--android:gravity="center"-->
    <!--android:textSize="22sp"-->
    <!--android:text="日常点检"/>-->
    <!--</RelativeLayout>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_title">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rl_category_title"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/tv_category"
                    style="@style/textview_title_style"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:textStyle="bold"
                    android:text="@string/category" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_category_value"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/rl_category_title"
                android:background="#eee">

                <TextView
                    android:id="@+id/tv_category_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_vertical"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_item_title"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@id/rl_category_value">

                <TextView
                    android:id="@+id/tv_item"
                    style="@style/textview_title_style"
                    android:textStyle="bold"
                    android:text="@string/item" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_item_value"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@id/rl_item_title"
                android:background="#eee">

                <TextView
                    android:id="@+id/tv_item_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_vertical"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_desc_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_item_value">

                <TextView
                    android:id="@+id/tv_desc"
                    style="@style/textview_title_style"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/desc" />

                <ImageButton
                    android:id="@+id/btn_desc"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/tv_desc"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:scaleType="fitXY"
                    android:src="@drawable/desc" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_desc_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_desc_title"
                android:background="#eee">


                <TextView
                    android:id="@+id/tv_desc_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_vertical"
                    android:minHeight="50dp"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_memo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_desc_value">

                <TextView
                    android:id="@+id/tv_memo"
                    style="@style/textview_title_style"
                    android:textStyle="bold"
                    android:text="@string/memo" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_memo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_memo_title">

                <EditText
                    android:id="@+id/tv_memo_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/edit_login_org"
                    android:gravity="left"
                    android:hint="@string/memo_desc"
                    android:maxLength="150"
                    android:minHeight="100dp"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_take_photo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_memo">

                <TextView
                    android:id="@+id/tv_tacke"
                    style="@style/textview_title_style"
                    android:textStyle="bold"
                    android:text="@string/photo" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_take_photo_title">

                <ImageView
                    android:id="@+id/img_item"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="20dp"
                    android:scaleType="fitXY" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_btn"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@id/rl_photo">

                <Button
                    android:id="@+id/btn_yes"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/photo_btn_bg"
                    android:text="@string/yes"
                    android:textColor="#fff"
                    android:clickable="false"
                    android:layout_centerVertical="true" />

                <TextView
                    android:id="@+id/tv_time_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:textColor="#ff0000"
                    android:textSize="18sp"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/btn_no"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/btn_no"
                    android:text="@string/no"
                    android:textColor="#fff"
                    android:clickable="false"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>
