<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_index"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_category_title"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginLeft="90dp"
            android:gravity="center_vertical"
            android:text="@string/category_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_category_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/tv_category_title"
            android:gravity="center_vertical"
            android:textSize="18sp" />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/tv_star"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="★"
            android:textColor="#ff0000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_item_title"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginLeft="90dp"
            android:gravity="center_vertical"
            android:text="@string/item_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_item_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/tv_item_title"
            android:gravity="center_vertical"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tv_desc_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:minHeight="40dp"
            android:text="@string/desc_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_desc_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_desc_title"
            android:lineSpacingMultiplier="1.2"
            android:minHeight="40dp"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/tv_result_title"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginLeft="90dp"
            android:gravity="center_vertical"
            android:text="@string/result_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_result_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/tv_result_title"
            android:gravity="center_vertical"
            android:textSize="18sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginVertical="5dp"
        android:layout_marginStart="90dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/bg" />

    <!--<RelativeLayout-->
        <!--android:id="@+id/relativeLayout_photo"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="60dp"-->
        <!--android:layout_marginTop="5dp">-->

        <!--<TextView-->
            <!--android:id="@+id/tv_photo_title"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="55dp"-->
            <!--android:layout_marginLeft="90dp"-->
            <!--android:gravity="top"-->
            <!--android:text="图片:"-->
            <!--android:textSize="18sp" />-->

        <!--<RelativeLayout-->
            <!--android:id="@+id/mrl_photo"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="60dp"-->
            <!--android:layout_toEndOf="@+id/tv_photo_title"-->
            <!--android:layout_toRightOf="@+id/tv_photo_title"></RelativeLayout>-->

    <!--</RelativeLayout>-->

</LinearLayout>
